Fix internship name.

--- a/pages/bio.html
+++ b/pages/bio.html
@@ -61,7 +61,7 @@ permalink: pages/bio/
 		</li>
 		<li>
 			<p>2015: Internship in Behavioural Biology<br>
-				Social and vocal plasticity in european starling.<br>
+				Social and vocal convergence in european starling.<br>
 			</p>
 		</li>
 		<li>
