Rename bios in other file.

--- a/pages/bios/bio_eng.html
+++ b/pages/bios/bio_eng.html
@@ -1,7 +1,7 @@
 ---
 layout: bio_pages
 title: Bio_eng
-permalink: pages/bio_pages/bio_eng
+permalink: pages/bios/bio_eng
 ---
 <div class="Bio_eng" id="content">
 	<h2>Test paragraph</h2>
