Fix bios in bio.thml.

--- a/pages/bios/bio.html
+++ b/pages/bios/bio.html
@@ -1,7 +1,7 @@
 ---
 layout: bio_pages
 title: Bio
-permalink: pages/bio_pages/bio
+permalink: pages/bios/bio
 ---
 <div class="Bio" id="content">
 	<h2>Test paragraph</h2>
